--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
             android:exported="false" />
         <activity
             android:name=".TaskView"
+            android:exported="false" />
+        <activity
+            android:name=".ListView"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
