--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Projekt_AM_2023"
         tools:targetApi="31">
         <activity
+            android:name=".HorizontalList"
+            android:exported="true" />
+        <activity
             android:name=".VerticalList"
             android:exported="true" />
         <activity
