--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,13 @@
         android:theme="@style/Theme.Projekt_AM_2023"
         tools:targetApi="31">
         <activity
-<<<<<<< HEAD
             android:name=".EditTag"
             android:exported="false" />
         <activity
             android:name=".AddTag"
+            android:exported="false" />
+        <activity
+            android:name=".AddTask"
             android:exported="false" />
         <activity
             android:name=".EditTask"
