--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.Projekt_AM_2023"
         tools:targetApi="31">
         <activity
+            android:name=".CalendarWeekView"
+            android:exported="false" />
+        <activity
+            android:name=".TaskView"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
