--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,9 @@
         <activity
             android:name=".CalendarWeekView"
             android:exported="false" />
-
+        <activity
+            android:name=".BoardView"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
