(CalendarMonthView) change activity to fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,10 @@
             android:exported="false" />
         <activity
             android:name=".ListView"
-            android:exported="true" />
+            android:exported="false" />
+        <activity
+            android:name=".CalendarMonthView"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
