--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,25 +15,25 @@
         android:theme="@style/Theme.Projekt_AM_2023"
         tools:targetApi="31">
         <activity
-            android:name=".EditSection"
+            android:name=".section.EditSection"
             android:exported="false" />
         <activity
-            android:name=".AddSection"
+            android:name=".section.AddSection"
             android:exported="false" />
         <activity
-            android:name=".EditTag"
+            android:name=".tag.EditTag"
             android:exported="false" />
         <activity
-            android:name=".AddTag"
+            android:name=".tag.AddTag"
             android:exported="false" />
         <activity
-            android:name=".AddTask"
+            android:name=".task.AddTask"
             android:exported="false" />
         <activity
-            android:name=".EditTask"
+            android:name=".task.EditTask"
             android:exported="false" />
         <activity
-            android:name=".TaskView"
+            android:name=".task.TaskView"
             android:exported="false" />
         <activity
             android:name=".ListView"
